# fastrtc-talking-more

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
public/: index.html
src/: main.py
src/pause_detection/: __init__.py  protocol.py  silero.py
src/pause_detection/fsmn/: README.md  demo.py  model.py  test_vad_wav.py
src/speech_to_text/: __init__.py
src/speech_to_text/funasr/: __init__.py  debug_utils.py  model.py  test_model.py
src/text_to_speech/: __init__.py  base_model.py
src/text_to_speech/chattts/: __init__.py  model.py
src/text_to_speech/megatts/: __init__.py  model.py
